# pocket-tts-cli

./: .gitignore  AGENTS.md  README.md  pyproject.toml
scripts/: migrate_runs_to_voices.py
site/: .gitignore  package-lock.json  package.json  svelte.config.js  vite.config.ts
site/src/: app.css
site/src/lib/common/: DownloadManager.svelte  DownloadToast.svelte
site/src/lib/server/: voice-clones.ts  voices.ts
site/src/routes/: +page.ts
site/src/routes/api/clone-voice/: +server.ts
site/src/routes/api/voices/: +server.ts
site/src/routes/api/voices/[voice]/[version]/: +server.ts
site/src/routes/tts/: +page.svelte  audio.ts  inference.ts
src/: pocket_tts_youtube_pipeline.py  voice_workbench.py
